@@ -99,6 +99,9 @@
 /* Define to 1 if you have the `elf' library (-lelf). */
 #undef HAVE_LIBELF
 
+/* Define to 1 if you have the `job' library (-ljob). */
+#undef HAVE_LIBJOB
+
 /* Define to 1 if you have the `kvm' library (-lkvm). */
 #undef HAVE_LIBKVM
 
@@ -410,8 +413,8 @@
 /* turns on the compilation of QUICKCOMMIT code */
 #undef QUICKCOMMIT
 
-/* turns on the compilation of RESOURCEMAXNOTDEFAULT code */
-#undef RESOURCEMAXNOTDEFAULT
+/* turns on the compilation of RESOURCEMAXDEFAULT code */
+#undef RESOURCEMAXDEFAULT
 
 /* Define to enable RPP resource queries */
 #undef RPP
