@@ -163,9 +163,9 @@
 #define ATTR_intcmd      "inter_cmd"
 #define ATTR_P           "proxy_user"
 
-#ifdef ENABLE_CSA
+#ifdef USEJOBCREATE
 #define ATTR_pagg         "pagg_id"
-#endif /* ENABLE_CSA */
+#endif /* USEJOBCREATE */
 
 /* additional queue attributes names */
 
