@@ -1438,9 +1438,9 @@ const char *TJobAttr[] =
   "job_type",
   "inter_cmd",
   "proxy_user",
-#ifdef ENABLE_CSA
+#ifdef USEJOBCREATE
   "pagg_id",
-#endif /* ENABLE_CSA */
+#endif /* USEJOBCREATE */
   NULL
   };
 
